--- a/draft.tex
+++ b/draft.tex
@@ -191,6 +191,7 @@ Of course, it is possible that one country can take advantage of the other in a 
 
 %Though it will not be modeled here, a stochastic component -- when countries occasionally unilaterally defect -- can explain why powerful countries like the USSR more often ``get away'' with cheating: the payoffs to the relationship are not symmetric. Losing the USA or USSR as an ally is much more devastating for a satellite country than vise versa, therefore big countries can have their alliances and take advantage of them too.
 \subsection{Concessions Separating Equilibrium}
+\label{sec:cse}
 The other separating equilibrium of interest involves distrustful countries to using concessions as a way of building trust. We call this the \emph{concessions separating equilibrium}. In this equilibrium, the cost of giving a concession can be worth the investment if the other country also cooperates. It is also not as risky as the \emph{no-concession separating equilibrium}. The concessions are given before more substantive actions, thus concessions are a costly signal that the other country is serious about cooperating. Most agreements come with concessions, and in many cases, though not all, they are used as signals. The goal is to use this option to avoid continual distrust. That is, high types make use of concessions to identify themselves as trustworthy partners in hopes of establishing Peace.
 
 In the \emph{concessions separating equilibrium}, low types do not give concessions while high types give a concession in period 0. If both countries receive concessions, they know the other is a high type and both play Trust in subsequent periods. Otherwise, if even one player does not receive a concession, there is at least one low type so both countries play Fight in subsequent periods. Because of the signaling value of the concessions given in period 0, starting from period 1 in the Trust/Fight game, both countries play the same strategy in a separating equilibrium, that is both play Trust if there were two high signals and otherwise both play Fight.
@@ -289,7 +290,7 @@ $\de_h$ is not involved in any of these calculations, so we can see that for any
 \label{sec:matval}
 We now relax the assumption about the benefit of a concession being equal to its cost and instead allow countries to ``burn'' a portion of the concession they give. For example, an expensive display of pageantry to a dignitary might benefit the receiving country very little, if at all, but it still signals good intentions on behalf of the giving country. The option to give efficient concessions is still available along with new options to give a variety of less efficient concessions. 
 
-We implement this by allowing countries to choose a scalar $e$ to multiply by their given concession $g$. $0 \leq e \leq 1$. As before, $C(g)= g$ but while the receiving country observes the full concession $g$, its benefit is now only $eg$.\footnote{In a more general model, we could also think of $e$ as a function $E(\cdot)$. The argument is still $g$, but instead of a scalar, $E(\cdot)$ can transform $g$ into any concession, not only a numerical value. These gifts will be converted into utilities by cost and benefit functions, which then allow the possibility of a gift having efficiency greater than 1. The transformation function $E(\cdot)$ can be thought of as the type of gift, and has a cost to the sender and a direct benefit to the receiver in addition to its signaling value.} 
+We implement this by allowing countries to choose a scalar $e$ to multiply by their given concession $g$ where $0 \leq e \leq 1$. As before, $C(g)= g$ but while the receiving country observes the full concession $g$, the future benefit to the recipient is now only $eg$.\footnote{In a more general model, we could also think of $e$ as a function $E(\cdot)$. The argument is still $g$, but instead of a scalar, $E(\cdot)$ can transform $g$ into any concession. In particular, this allows the transformation to increase the value of the concession. The transformation function $E(\cdot)$ can be thought of as the type of gift, and has a cost to the sender and a direct benefit to the receiver in addition to its signaling value.} Table 3 provides the modified payoffs in the repeated game.
 
 \begin{center}
 \captionof{table}{Stage game payoffs when concessions have material value that can be destroyed}
@@ -302,22 +303,13 @@ We implement this by allowing countries to choose a scalar $e$ to multiply by th
 \end{tabular}
 \end{center}
 
-Before turning to the question of how the possibility of destroying the value of concessions impacts the ability of the parties to separate, we first formally establish the welfare implications.
+Before turning to the question of how the possibility of destroying the value of concessions impacts the ability of the parties to achieve peace, we first formally establish the welfare implications.
 
 \begin{lemma}
-	Assuming that a separating equilibrium exists when concessions have material value and are efficient (where $e=1$), it is optimal to give efficient concessions in a separating equilibrium.
+	If a separating equilibrium exists when concessions have material value and are efficient (where $e=1$), it is optimal to give efficient concessions in a separating equilibrium if and only if $pT \geq (1-p)D$.
 	\label{lemma:efficiency}
 \end{lemma}
-\emph{Proof:}
-The benefit of a gift appears on both sides of the IC for both types and thus cancels out in the low type IC $(peg_h +X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-g_h+peg_h )$ and in the high type IC:  $(pX_{TT}^h+(1-p)X_{FF}^h - g_h +peg_h \geq X_{FF}^h +peg_h)$.\footnote{Elaboration and explanation of the IC constraints is in the proof of Theorem~\ref{theorem:2}.} Therefore, receiving a gift where $e<1$  does not affect incentives to truth tell about the countries' types. However, the expected separation utilities under this game are now
-\be
-U_h= pX_{TT}+(1-p)X_{FF} - g_h+peg_h 
-\ee
-and
-\be
-U_l=X_{FF}+peg_h 
-\ee
- $\frac{dU}{de}>0$ for both countries so it is never optimal have $e<1$.\footnote{This result does not depend on the benefit so it holds for any monotonic benefit function. It also holds for any monotone cost function.} \hfill $\blacksquare$
+\emph{Proof:} See Appendix.
 
 %need to also write constraints for high type IC to be satisfied, or appeal to forward induction
 %? And, a mechanism improves upon inefficiency because it allows a high types to only give a gift to other high types, thus decreasing their costs and still giving the same equilibrium matches.  . Does this rely on varied costs of giving- i.e with same costs can a mechanism still improve? 
@@ -325,6 +317,8 @@ U_l=X_{FF}+peg_h
 %{\bf Theorem 12:}\\  
 %When concessions are inefficient, $M$ can still improve over bilateral negotiation. \\
 % \emph{Proof}: A mechanism works as in proof (6) with the additional liability that high-high concession exchanges are no longer efficient so a mechanism's advantage is not as strong. 
+
+The intuition for Lemma~\ref{lemma:efficiency} is that future material value of concession helps you when your negotiating partner turns out to be a high type, and this happens $p$ of the time. On other other hand, the material value of your concession \emph{hurts} you when your negotiating partner turns out to be a low type. The future material of concessions increase the expected utility from a separating equilibrium when both the payoffs from Trust and the probability of a high type are relatively large.
 
 We next turn to our main result for the case where the material value of concessions can be destroyed...
 
@@ -416,7 +410,7 @@ This paper shows that inefficient concessions may be used to achieve peace when 
 \section{Appendix}
 
 
-\noindent {\bf \emph{Pooling equilibrium}}
+\subsection{Pooling equilibrium}
 \begin{lemma}
 	From period 1 on, playing fight in all periods regardless of beliefs constitutes an equilibrium strategy of the continuation game for both types.
 	\label{lemma:1}
@@ -435,7 +429,7 @@ That is, one high type equilibrium strategy is to pool with the low types---who 
  %add intro about the 3 types of equilibria. 
  \\
  \\
- {\bf \emph{No-Concessions Separating Equilibrium}}
+\subsection{No-Concessions Separating Equilibrium}
  
  We examine the conditions for a separating equilibrium held in place by a grim trigger.
  
@@ -462,14 +456,14 @@ Simplifying, we have
 	\label{eq:ncse}
 \ee
 
-If the potential advantages of Peace are large enough to outweigh the risks of encountering a low type in expected utility terms, that is $\de_h \geq \frac{W}{(1-p)W + p(T+D)} = \de_h^{nc}$, a county has the incentive to play Trust in the first round rather than Fight. Any player with $\de < \de_h^{nc}$ has the incentive---by this same inequality---to play Fight in each period even if the other country plays Trust. Thus we call these countries low types for purposes of this equilibrium. \hfill $\blacksquare$\\
+If the potential advantages of Peace are large enough to outweigh the risks of encountering a low type in expected utility terms, that is $\de_h \geq \frac{W}{(1-p)W + p(T+D)} = \de_h^{nc}$, a county has the incentive to play Trust in the first round rather than Fight. Any player with $\de < \de_h^{nc}$ has the incentive---by this same inequality---to play Fight in each period even if the other country plays Trust. Thus we call these countries low types for purposes of this equilibrium. \hfill $\blacksquare$
 %\noindent{\emph{Proof of Corollary \ref{corollary:1}}:\\
 %High-type welfare under the no-concessions separating equilibrium is $$\frac{1}{1-\de_h}\left\{pT + (1-p)(W-D) \right\} = \frac{1}{1-\de_h}\left\{pT + (1-p)\left[W-D + \de_h(W-D)\right]\right\}$$
 %High-type welfare under the grim trigger repeated game equilibrium is $\frac{1}{1-\de_h}\left\{pT + (1-p)\left[-D + \de_h(W-D) \right]\right\}$
 %When $e=0$, welfare is $$\frac{1}{1-\de_h}\left\{pT + (1-p)(W-D)\right\} - p(T+D)$$
 %This type of separating equilibrium can exist for some sets of parameters. Since the high types have sufficient incentive to separate under appropriate parameter values even without concessions being given in period 0, we refer to such an equilibrium as a \emph{no-concessions separating equilibrium}. This is why the threshold patience level for this type of equilibrium is labeled $\de_h^{nc}$.
-\\
-{\bf \emph{Concessions Separating Equilibrium}}
+
+\subsection{Concessions Separating Equilibrium}
 
 If the condition in Expression~\ref{eq:ncse} is not met, a separating equilibrium cannot be achieved with no concessionsin period 0.\footnote{Countries need to deliver concessions in period 0, not just promise them. A concession that is promised but not delivered will count as cheap talk.} If instead high-type negotiating parties have sufficient incentive to give a concession that reveals their type in period 0, the high types could safely play Trust in period 1, allowing two high types to avoid the trap of War that would occur under pooling. 
 
@@ -536,9 +530,9 @@ Rearranging,
 \be
  \frac{W}{T+D}\geq p
 \ee
-i.e. The high types prefer the \emph{concessions separating equilibrium} when $p$ is smaller than $\frac{W}{T+D}$. \hfill $\blacksquare$\\
-\\
-{\bf \emph{Concessions Separating Equilibrium with Material Value}}\\
+i.e. The high types prefer the \emph{concessions separating equilibrium} when $p$ is smaller than $\frac{W}{T+D}$. \hfill $\blacksquare$
+
+\subsection{Concessions Separating Equilibrium with Material Value}
 \emph{Proof of Theorem \ref{theorem:csemv}:}\\
 In the separating equilibrium constructed here, players will believe that any concession not equal to the equilibrium concession of the high type $g^1$ is a low type gift. In this case, the binding incentive compatibility constraint is the low type IC constraint, which when simplified to allow $g_l=0$ following Lemma~\ref{lemma:3} is: 
 \begin{equation}
@@ -594,15 +588,28 @@ Substituting the minimum efficient concession from Expression~\ref{eq:matval2}, 
 \be
 	\de_h \geq \frac{p(W-D-T)}{\frac{\left(1-\de_l\right)p\left(D +	 T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}} + p (W-T) + (1-p)D + 1
 \ee
-That is, there is no parameter restriction beyond our definition of what it means for a player to be a high type. \hfill $\blacksquare$\\
-\\
-{\bf \emph{Mediation}}\\
-\emph{Proof of Theorem \ref{theorem:4}:}\\
-High types choose $\alpha=1$ (because a concession would only come from another high type in equilibrium) and low types choose $\alpha=0$. Because the low type's IC constraint binds, with $e=1$ the optimal concession can be calculated to be $g^1= \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D}$. The high type's utility when $e=1$ is then $\frac{1}{1-d_h}\left\{pT(1+g^*) + (1-p)(W-D(1+g^*))\right\} - g^1$.
+That is, there is no parameter restriction beyond our definition of what it means for a player to be a high type. \hfill $\blacksquare$
 
-When $e=0$---that is, the future material value of the concessions is destroyed---we are essentially back in the case of Section~\ref{sec:bench} and the minimum separating concession is $g^0=p(T+D)$. The threshold for high types to cooperate is again $\frac{W}{T+D}$. High type utility when $e=0$ is $\frac{1}{1-d_h}\left\{pT + (1-p)(W-D)\right\} - g^0$.
+\subsection{Material Value of Concessions can be Destroyed}
+\emph{Proof of Lemma~\ref{lemma:efficiency}:}\\
+%The benefit of a gift appears on both sides of the incentive compatibility constraint for both types and thus cancels out in the low type incentive compatibility constraint $(peg_h +X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-g_h+peg_h )$ and in the high type incentive compatibility constraint: $(pX_{TT}^h+(1-p)X_{FF}^h - g_h +peg_h \geq X_{FF}^h +peg_h)$. Therefore, receiving a gift where $e<1$  does not affect incentives to truth tell about the countries' types.
+The expected separation utility for the hight type under the game with material value that can be destroyed is
+$$\frac{1}{1-\de_h}\left\{pT(1+eg^1) + (1-p)(W-D(1+eg^1))\right\} - (1-p)g^1$$
+The derivative with respect to $e$ is
+$$\frac{1}{1-\de_h}\left\{pTg^1 - (1-p)Dg^1)\right\}$$
+This is non-negative when $pT \geq (1-p)D$. High type welfare is thus non-decreasing in $e$ when this condition is met.  The largest admissible value of $e$, i.e. $e=1$ thus maximizes welfare when $pT \geq (1-p)D$.\footnote{If $pT = (1-p)D$, $e=1$ is not the unique maximizer, but it is still a maximizer.} \hfill $\blacksquare$\\
+%\footnote{This result does not depend on the benefit so it holds for any monotonic benefit function. It also holds for any monotone cost function.} 
+\\
+\emph{Proof of Theorem \ref{theorem:4}:}\\
+High types choose $\alpha=1$ (because a concession would only come from another high type in equilibrium) and low types choose $\alpha=0$. The high type's utility when $e=1$ is
+$$\frac{1}{1-\de_h}\left\{pT(1+g^1) + (1-p)(W-D(1+g^1))\right\} - (1-p)g^1 $$
+where $g^1= \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D}$.
+
+When $e=0$---that is, the future material value of the concessions is destroyed---we are essentially back in the case of Section~\ref{sec:cse}. High type utility when $e=0$ is $$\frac{1}{1-d_h}\left\{pT + (1-p)(W-D)\right\} - (1-p)g^0$$ where the minimum separating concession is $g^0=p(T+D)$. The threshold for high types to cooperate is again $\frac{W}{T+D}$. 
 
 Whether it is beneficial for high types to settle on the efficient concession or the inefficient concession is determined by comparing the utility under each, and either can be larger. Inefficient concessions are made optimal when $p$ is low (there's a good chance of facing a low type who will use the concession against you) as well as when $\de_l$ is low ($g^1$ is decreasing in the patience of the low type, as a larger concession is required to deter an impatient low-type from being untruthful). \hfill $\blacksquare$ 
+
+\subsection{Mediation}
 
 
 \newpage
